<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/file_name"
        android:hint="@string/en_craft_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/resize"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/resize"
        android:hint="@string/en_resize"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/result_btn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/result_btn"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:text="@string/en_button"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_btn"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/toWidth"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/en_toWidth">
        </RadioButton>
        <RadioButton
            android:id="@+id/toScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_toScale">
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:text="@string/en_help"
        android:layout_centerHorizontal="true">
    </Button>

    <TextView
        android:id="@+id/textView"
        android:text="@string/en_by_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/helpButton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView1"
        android:text="@string/en_studio"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>